# src/controllers/auth.controller.ts
@@ -22,12 +22,24 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, "Password must be at least 6 characters").test("at-least-one-uppercase-letter", "Contains at least one uppercase letter", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+    }).test("at-least-one-number", "Contains at least one uppercase letter", (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+    }),
     confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password not match!"),
 });
 
 export default {
     async register(req: Request, res: Response) {
+        /**
+         #swagger.tags = ['Auth']
+         */
+
         const {
             fullName,
             username,
@@ -71,6 +83,7 @@ export default {
 
     async login(req: Request, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.requestBody = {
          required: true,
          schema: {$href: "#/components/schemas/LoginRequest"}
@@ -90,7 +103,9 @@ export default {
                     {
                         username: identifier,
                     }
-                ]
+                ],
+
+                isActive: true,
             });
 
             if(!userByIdentifier) {
@@ -131,6 +146,7 @@ export default {
 
     async me(req: IReqUser, res: Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
             "bearerAuth": []
          }]
@@ -144,6 +160,44 @@ export default {
                 data: result,
             })
 
+        } catch (error) {
+            const err = error as unknown as Error;
+
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            }); 
+        }
+    },
+
+    async activation(req: Request, res: Response) {
+
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+         required: true,
+         schema: {$href: "#/components/schemas/ActivationRequest"}
+         }
+         */
+
+        try {
+            const { code } = req.body as { code: string }
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                },
+            );
+            res.status(200).json({
+                message: "User successfully activated",
+                data: user,
+            })
         } catch (error) {
             const err = error as unknown as Error;
 
